[gd_scene load_steps=11 format=3 uid="uid://dmsnvoi6jecmu"]

[ext_resource type="Script" uid="uid://jkieex7iqktf" path="res://Scripts/enemy.gd" id="1_y1cks"]
[ext_resource type="Script" uid="uid://b223en6jbd3i" path="res://Scripts/enemy_healthbar.gd" id="3_dbmbk"]
[ext_resource type="Script" uid="uid://dtcjhgduym52" path="res://Scripts/state_machine.gd" id="3_eh4li"]
[ext_resource type="Texture2D" uid="uid://bkqiygv05byvp" path="res://Assets/enemy.png" id="4_haro7"]
[ext_resource type="Script" uid="uid://cnvj15a6sbgw7" path="res://Scripts/random_timer.gd" id="5_ii8wk"]
[ext_resource type="Script" uid="uid://b1bt3alhb3deu" path="res://Scenes/Chase.gd" id="7_prg2b"]
[ext_resource type="Script" uid="uid://cnk137ycb1fj4" path="res://Scenes/Attack.gd" id="8_kjs45"]
[ext_resource type="Script" uid="uid://davdebiw0yteq" path="res://Scripts/health_system.gd" id="9_6o8ke"]
[ext_resource type="Theme" uid="uid://o2i6ofsjprkk" path="res://Themes/ui.theme" id="10_svtdj"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_m24dh"]
radius = 8.0
height = 22.0

[node name="ZombieEnemy" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_y1cks")

[node name="LifeBar" type="ProgressBar" parent="."]
offset_left = -10.0
offset_top = -17.0
offset_right = 10.0
offset_bottom = -13.0
theme = ExtResource("10_svtdj")
step = 1.0
value = 20.0
show_percentage = false
script = ExtResource("3_dbmbk")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("4_haro7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, -0.5)
shape = SubResource("CapsuleShape2D_m24dh")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
debug_enabled = true

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("3_eh4li")
initial_state = NodePath("Chase")

[node name="Chase" type="Node" parent="StateMachine"]
script = ExtResource("7_prg2b")

[node name="RandomTargetChaseUpdateTimer" type="Timer" parent="StateMachine/Chase"]
one_shot = true
script = ExtResource("5_ii8wk")
min_time = 0.5
max_time = 3.0

[node name="Attack" type="Node" parent="StateMachine"]
script = ExtResource("8_kjs45")

[node name="StateLabel" type="Label" parent="."]
visible = false
offset_left = -22.0
offset_top = -46.0
offset_right = 18.0
offset_bottom = -23.0

[node name="VisionRayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(200, 0)
collision_mask = 2
collide_with_areas = true

[node name="HealthSystem" type="Node" parent="."]
script = ExtResource("9_6o8ke")

[connection signal="damage_taken" from="HealthSystem" to="StateMachine" method="_on_health_system_damage_taken"]
